--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.456.0",
