sync-and-deploy파일에 옵션 추가

--- a/.github/workflows/sync-and-deploy.yml
+++ b/.github/workflows/sync-and-deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Sync with upstream
         run: |
           git fetch upstream main
-          git merge upstream/main
+          git merge upstream/main --allow-unrelated-histories
           
       - name: Push changes
         run: |
