fix:configure git 추가

--- a/.github/workflows/sync-and-deploy.yml
+++ b/.github/workflows/sync-and-deploy.yml
@@ -16,6 +16,11 @@ jobs:
           token: ${{ secrets.DEPLOY_PAT }}
           ref: main
           
+      - name: Configure Git
+        run: |
+          git config --global user.name "hyeri1126"
+          git config --global user.email "hyeri1126@ewhain.net"
+          
       - name: Configure upstream
         run: |
           git remote add upstream https://github.com/woorifisa-projects-3rd/MSA-FE.git
